change name and color

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			            <div class="item active">
 			            	<img src="img/slide-one.jpg" alt="">
 			                <div class="carousel-caption">
-		               			<h1>providing</h1>
+		               			<h1>Alpha CT Scan And MRI Center</h1>
 		               			<p>highquality service for men &amp; women</p>
 		               			<button>learn more</button>
 			                </div>
@@ -79,7 +79,7 @@
 			            <div class="item">
 			            	<img src="img/slide-two.jpg" alt="">
 			                <div class="carousel-caption">
-		               			<h1>providing</h1>
+		               			<h1>Alpha CT Scan & MRI Center</h1>
 		               			<p>highquality service for men &amp; women</p>
 		               			<button>learn more</button>
 			                </div>
@@ -87,7 +87,7 @@
 			            <div class="item">
 			            	<img src="img/slide-three.jpg" alt="">
 			                <div class="carousel-caption">
-		               			<h1>providing</h1>
+		               			<h1>Alpha CT Scan & MRI Center</h1>
 		               			<p>highquality service for men &amp; women</p>
 		               			<button>learn more</button>
 			                </div>
@@ -95,7 +95,7 @@
 			            <div class="item">
 			            	<img src="img/slide-four.jpg" alt="">
 			                <div class="carousel-caption">
-		               			<h1>providing</h1>
+		               			<h1>Alpha CT Scan & MRI Center</h1>
 		               			<p>highquality service for men &amp; women</p>
 		               			<button>learn more</button>
 			                </div>
